Feature/fixing benchmark reporting (#123)